--- a/voronoi.html
+++ b/voronoi.html
@@ -3,6 +3,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <script src="./bower_components/three.js/three.min.js"></script>
     <script src="./bower_components/js-priority-queue/priority-queue.min.js"></script>
+		<!-- <script src="./avl-tree.js"></script> -->
   </head>
   <body>
     <canvas id="forces" width="800" height="800" style="border:1px solid black">forces</canvas>
