--- a/voronoi.html
+++ b/voronoi.html
@@ -7,8 +7,13 @@
   </head>
   <body>
     <canvas id="forces" width="800" height="800" style="border:1px solid black">forces</canvas>
-    <button type="button" id="next">Next</button>
-    <button type="button" id="pause">Pause</button>
+    <p>
+      <button type="button" id="back">Back</button>
+      <button type="button" id="next">Next</button>
+    </p>
+    <p>
+      <button type="button" id="pause">Pause</button>
+    </p>
   </body>
   <script src="voronoi.js"></script>
 </html>
