--- a/avl-tree.html
+++ b/avl-tree.html
@@ -7,4 +7,5 @@
     <button type="button" id="pause">Pause</button>
   </body>
   <script src="avl-tree.js"></script>
+  <script src="avl-tree-test.js"></script>
 </html>
