--- a/voronoi.html
+++ b/voronoi.html
@@ -3,10 +3,10 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <script src="./bower_components/three.js/three.min.js"></script>
     <script src="./bower_components/js-priority-queue/priority-queue.min.js"></script>
-		<!-- <script src="./avl-tree.js"></script> -->
+		<script src="./avl-tree.js"></script>
   </head>
   <body>
-    <canvas id="forces" width="800" height="800" style="border:1px solid black">forces</canvas>
+    <canvas id="forces" width="600" height="600" style="border:1px solid black">forces</canvas>
     <p>
       <button type="button" id="back">Back</button>
       <button type="button" id="next">Next</button>
