avl tree works again, some jasmine tests

--- a/avl-tree.html
+++ b/avl-tree.html
@@ -3,9 +3,12 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   </head>
   <body>
-    <canvas id="tree" width="600" height="600" style="border:1px solid black">tree</canvas>
+    <h1 id="info">Insert</h1>
     <button type="button" id="pause">Pause</button>
+    <button type="button" id="step">Step</button>
+    <canvas id="tree" width="600" height="600" style="border:1px solid black">tree</canvas>
   </body>
+  <script src="bower_components/jquery/dist/jquery.js"></script>
   <script src="avl-tree.js"></script>
   <script src="avl-tree-test.js"></script>
 </html>
