--- a/voronoi.html
+++ b/voronoi.html
@@ -7,7 +7,7 @@
     <script src="./bitset.js"></script>
   </head>
   <body>
-    <canvas id="forces" width="600" height="600" style="border:1px solid black">forces</canvas>
+    <canvas id="sites" width="600" height="600" style="border:1px solid black">Sites</canvas>
     <p>
       <button type="button" id="back">Back</button>
       <button type="button" id="next">Next</button>
@@ -15,6 +15,7 @@
     <p>
       <button type="button" id="pause">Pause</button>
     </p>
+    <canvas id="tree" width="600" height="600" style="border:1px solid black">Tree</canvas>
   </body>
   <script src="voronoi.js"></script>
 </html>
