Dcel partially implemented

--- a/voronoi.html
+++ b/voronoi.html
@@ -3,6 +3,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <script src="./bower_components/three.js/three.min.js"></script>
     <script src="./bower_components/js-priority-queue/priority-queue.min.js"></script>
+    <script src="./bower_components/lodash/lodash.js"></script>
     <script src="./avl-tree.js"></script>
     <script src="./bitset.js"></script>
   </head>
