separated test code from algorithm

--- a/voronoi.html
+++ b/voronoi.html
@@ -16,4 +16,5 @@
     <canvas id="tree" width="600" height="600" style="border:1px solid black">Tree</canvas>
   </body>
   <script src="voronoi.js"></script>
+  <script src="voronoi-test.js"></script>
 </html>
